--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -90,6 +90,7 @@ margin: 6rem 0;
 .skill__list{
   display: grid;
   grid-template-columns: repeat( auto-fit, minmax(min(100%, 150px),2fr));
+  width: 100%;
 }
 .skill__item{
   width: 150px;
@@ -143,7 +144,7 @@ margin: 6rem 0;
 
 .timeline__year{
   color: var(--clr-dark-gray);
-  margin-bottom: 3em;
+  margin-bottom: 2.5em;
 }
 
 .timeline__item{
